--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@types/node": "^20.3.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
@@ -24,6 +25,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "tsc-alias": "^1.8.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
