--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,15 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "." ,
+    "paths": {
+      "@interfaces/*": ["src/interfaces/*"],
+      "@src/*": ["src/*"],
+      "@components/*" : ["src/components/*"],
+      "@handlers/*" : ["src/handlers/*"],
+      "@pages/*" : ["src/pages/*"],
+      "@assets/*" : ["src/assets/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
